# python-calculator

./: setup.cfg
pythoncalculator/: __init__.py  subtract.py
tests/: test_divide.py  test_multiply.py  test_subtract.py
